Made changes in accordance with the technical requirements

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,11 @@
 cmake_minimum_required(VERSION 3.16)
 
-# Название проекта
 project(finalProject)
 
-# Устанавливаем стандарт C++
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-# Подключение Google Test через FetchContent
+# Подключаем Google Test (FetchContent)
 include(FetchContent)
 FetchContent_Declare(
     googletest
@@ -15,7 +13,10 @@ FetchContent_Declare(
 )
 FetchContent_MakeAvailable(googletest)
 
-# Основной исполняемый файл
+# Включаем тестирование
+enable_testing()
+
+# --- Основной исполняемый файл ---
 add_executable(finalProject
     main.cpp
     src/converter_json.cpp
@@ -23,10 +24,9 @@ add_executable(finalProject
     src/search_server.cpp
 )
 
-# Указываем пути для nlohmann/json
 target_include_directories(finalProject PRIVATE ${CMAKE_SOURCE_DIR}/external/nlohmann)
 
-# Тесты для InvertedIndex
+# --- Тесты для InvertedIndex ---
 add_executable(test_inverted_index
     tests/test_main.cpp
     tests/test_inverted_index.cpp
@@ -34,8 +34,9 @@ add_executable(test_inverted_index
 )
 target_include_directories(test_inverted_index PRIVATE ${CMAKE_SOURCE_DIR}/external/nlohmann)
 target_link_libraries(test_inverted_index gtest gtest_main)
+add_test(NAME test_inverted_index COMMAND test_inverted_index)
 
-# Тесты для SearchServer
+# --- Тесты для SearchServer ---
 add_executable(test_search_server
     tests/test_main.cpp
     tests/test_search_server.cpp
@@ -44,7 +45,18 @@ add_executable(test_search_server
 )
 target_include_directories(test_search_server PRIVATE ${CMAKE_SOURCE_DIR}/external/nlohmann)
 target_link_libraries(test_search_server gtest gtest_main)
+add_test(NAME test_search_server COMMAND test_search_server)
 
-# Копирование JSON-файлов в папку сборки
-configure_file(${CMAKE_SOURCE_DIR}/config.json ${CMAKE_BINARY_DIR}/config.json COPYONLY)
+# --- Тесты для ConverterJSON ---
+add_executable(test_converter_json
+    tests/test_main.cpp
+    tests/test_converter_json.cpp
+    src/converter_json.cpp
+)
+target_include_directories(test_converter_json PRIVATE ${CMAKE_SOURCE_DIR}/external/nlohmann)
+target_link_libraries(test_converter_json gtest gtest_main)
+add_test(NAME test_converter_json COMMAND test_converter_json)
+
+# Копируем JSON-файлы в папку билда, чтобы исполняемые файлы могли их найти
+configure_file(${CMAKE_SOURCE_DIR}/config.json   ${CMAKE_BINARY_DIR}/config.json   COPYONLY)
 configure_file(${CMAKE_SOURCE_DIR}/requests.json ${CMAKE_BINARY_DIR}/requests.json COPYONLY)
