--- a/config.json
+++ b/config.json
@@ -1,4 +1,11 @@
 {
-    "data_path": "data/",
-    "max_responses": 5
-}
+    "config": {
+      "name": "MySearchEngine",
+      "version": "0.1",
+      "max_responses": 5
+    },
+    "files": [
+      "data/doc1.txt",
+      "data/doc2.txt"
+    ]
+  }
